# meathook-rs

./: .gitignore  CHANGELOG.md  CLAUDE_PLAN.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: qc.yml
docs/: IDEA.md  STREAMING.md
examples/: meathook.toml  nea_weather.rs
src/: collector.rs  encode.rs  layer.rs  lib.rs  pipeline.rs  runtime.rs  satay.rs  sink.rs  test_util.rs
src/layer/: disk.rs
src/sink/: huggingface.rs
tests/: hf_integration.rs
website/: .gitignore  package.json
website/scripts/: process-stats.mjs  sample.mjs
website/src/components/: Closing.astro  CodeExample.astro  CodeSnippet.astro  Compose.astro  Durability.astro  Ephemeral.astro  Features.astro  Flow.astro  Footer.astro  Footprint.astro  Hero.astro  Nav.astro  Pipeline.astro  Reveal.astro  SinkFork.astro  Stack.astro  WorkedExample.astro
website/src/data/: footprint.json
website/src/layouts/: Layout.astro
website/src/lib/: arborium.mjs  highlight.mjs
website/src/pages/: index.astro
website/src/styles/: global.css
